syntax = "proto3";

package sensateiot.router;
option csharp_namespace = "SensateIoT.Platform.Router.Contracts.DTO";

import "google/protobuf/timestamp.proto";

message TextMessage {
	string Data = 1;
	google.protobuf.Timestamp PlatformTime = 2;
	google.protobuf.Timestamp Timestamp = 3;
	double Longitude = 4;
	double Latitude = 5;
	string SensorID = 6;
	int32 Encoding = 7;
}

message TextMessageData {
	repeated TextMessage Messages = 1;
}
